fix: change popup height on mobile devices

--- a/src/blocks/popup/__text/popup__text.css
+++ b/src/blocks/popup/__text/popup__text.css
@@ -14,3 +14,11 @@
 .popup__text:last-of-type {
   padding-bottom: 50px;
 }
+
+@media screen and (max-height: 812px) {
+  .popup__text {
+    font-size: 10px;
+    line-height: 12px;
+    padding-bottom: 5px;
+  }
+}
